config/examples/relay-wss/agent-canary-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: wirekube-agent-wss-canary
  namespace: wirekube-system
  labels:
    app.kubernetes.io/name: wirekube-agent-wss-canary
    app.kubernetes.io/component: agent
spec:
  selector:
    matchLabels:
      app: wirekube-agent-wss-canary
  template:
    metadata:
      labels:
        app: wirekube-agent-wss-canary
        app.kubernetes.io/name: wirekube-agent-wss-canary
        app.kubernetes.io/component: agent
    spec:
      serviceAccountName: wirekube-agent
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      tolerations:
        - operator: Exists
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: wirekube.io/agent-canary
                    operator: In
                    values:
                      - "true"
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: agent
          image: inerplat/wirekube:v0.0.21
          command: ["wirekube-agent"]
          args:
            - --node-name=$(NODE_NAME)
          securityContext:
            privileged: true
            appArmorProfile:
              type: Unconfined
            capabilities:
              add: ["NET_ADMIN", "SYS_MODULE"]
          volumeMounts:
            - name: wireguard-keys
              mountPath: /var/lib/wirekube
            - name: host-proc-sys-net
              mountPath: /host/proc/sys/net
            - name: dev-net-tun
              mountPath: /dev/net/tun
            - name: relay-token
              mountPath: /var/run/secrets/wirekube-relay
              readOnly: true
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 128Mi
      volumes:
        - name: wireguard-keys
          hostPath:
            path: /var/lib/wirekube
            type: DirectoryOrCreate
        - name: host-proc-sys-net
          hostPath:
            path: /proc/sys/net
            type: Directory
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: relay-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  audience: wirekube-relay
                  expirationSeconds: 3600
