config/examples/relay-wss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wirekube-relay-wss
  namespace: wirekube-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - relay.example.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /relay
      backendRefs:
        - name: wirekube-relay-ws
          port: 8081
      timeouts:
        request: 0s
        backendRequest: 0s
